# FT_DA

./: .gitignore  .prettierignore  LICENSE  README.md  commitlint.config.js  docker-compose.yml  package-lock.json  package.json  test_supabase.py
.github/workflows/: backend_build_push.yml  backend_deployment.yml  codeql.yml  main.yml
.obsidian/: workspace.json
backend/: .gitignore  .isort.cfg  .pre-commit-config.yaml  API_REFERENCE.md  Dockerfile  README.md  openapi.json  pyproject.toml  requirements.txt
backend/app/: dependencies.py  main.py
backend/app/routers/account/: account.py
backend/app/routers/auth/: auth.py
backend/app/routers/bank_connection/: bank_connection.py
backend/app/routers/bot/: bot.py
backend/app/routers/finance/: finance.py
backend/app/routers/finance/categories/: categories.py
backend/app/routers/finance/saving_goals/: saving_goals.py
backend/app/routers/finance/saving_goals/contributions/: contributions.py
backend/app/routers/finance/subscriptions/: subcriptions.py
backend/app/routers/finance/transactions/: transactions.py
backend/app/routers/investments/: investments.py
backend/app/routers/invetsments/: investments.py
backend/app/routers/savings/: savings.py
backend/app/utils/analysis/: BillOCR.py  OCR.py  StockOCR.py
backend/app/utils/analysis/tests/: stock_ocr.ipynb
backend/tools/: export_openapi.py
mobile/: README.md  app.json  metro.config.js  nativecn-preset.js  nativecn.config.js  package-lock.json  package.json  tailwind.config.js
webapp/: Dockerfile  README.md  package-lock.json  package.json
(+129 files in other folders)
