[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "fastapi[standard]>=0.115.0",
    "supabase>=2.21.1",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.66",
]
